1999-11-02  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98d

	* ntpd/refclock_parse.c: Cleanup/fixes
	From: John Hay <jhay@mikom.csir.co.za>

	* ntpd/refclock_parse.c: Lose #include "ntp_select.h"
	* ntpd/ntpd.c: Lose #include "ntp_select.h"
	* ntpd/ntp_io.c: Lose #include "ntp_select.h"
	* ntpd/ntp_intres.c: Lose #include "ntp_select.h"
	* libntp/iosignal.c: Lose #include "ntp_select.h"
	* include/ntpd.h: #include "ntp_select.h" for declaration of activefds
	Reported by: Christian Krackowizer <kra1@technodat.co.at> 

1999-11-01  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98c

	* libntp/syssignal.c: Don't warn about SA_RESTART
	* libntp/recvbuff.c: Fix free buffer count
	From: Jeffrey C Honig <jch@bsdi.com>

	* html/pps.htm: 
	* html/howto.htm: 
	* html/confopt.htm: 
	* html/clockopt.htm: 
	* html/uthopt.htm:
	Updates.
	From: Dave Mills <mills@udel.edu>

	* ntpd/refclock_wwvb.c: burst fixes
	* ntpd/refclock_ulink.c: burst fixes
	* ntpd/refclock_tpro.c: burst and NSTAGE fixes
	* ntpd/refclock_pst.c: burst fixes
	* ntpd/refclock_irig.c: SAMPLE -> SAMPLES
	* ntpd/refclock_heath.c: burst fixes
	* ntpd/refclock_dumbclock.c: burst fixes
	* ntpd/refclock_chronolog.c: burst fixes
	* ntpd/refclock_bancomm.c: burst fixes
	* ntpd/refclock_atom.c: burst fixes
	* ntpd/refclock_as2201.c: burst fixes
	* ntpd/ntp_refclock.c: PPSAPI, code, and comment cleanup/fixes
	* ntpd/ntp_proto.c: Broadcast/restrict cleanup
	* ntpd/ntp_loopfilter.c: Cleanup and fixes
	* libntp/gpstolfp.c: Lose the UL qualifiers - old compilers hate them
	From: Dave Mills <mills@udel.edu>
	
1999-10-31  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: TIOCSPPS cleanup

1999-10-20  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.98b

	* ntpd/refclock_atom.c: AIOCTIMESTAMP patch
	* ntpd/ntpd.c: SCO clock patch
	* ntpd/ntp_request.c: noselect patch
	* ntpd/ntp_refclock.c: AIOCTIMESTAMP patch
	* ntpd/ntp_proto.c: noselect patch
	* ntpd/ntp_intres.c: noselect patch